// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test Vine compiler analyze > analyze \`vineExpose\` and \`vineOptions\` macro calls 1`] = `
{
  "macroCall": Node {
    "arguments": [
      Node {
        "end": 64,
        "loc": SourceLocation {
          "end": Position {
            "column": 22,
            "index": 64,
            "line": 4,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 13,
            "index": 55,
            "line": 4,
          },
        },
        "properties": [
          Node {
            "computed": false,
            "end": 62,
            "extra": {
              "shorthand": true,
            },
            "key": Node {
              "end": 62,
              "loc": SourceLocation {
                "end": Position {
                  "column": 20,
                  "index": 62,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": "count",
                "start": Position {
                  "column": 15,
                  "index": 57,
                  "line": 4,
                },
              },
              "name": "count",
              "start": 57,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 20,
                "index": 62,
                "line": 4,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 15,
                "index": 57,
                "line": 4,
              },
            },
            "method": false,
            "shorthand": true,
            "start": 57,
            "type": "ObjectProperty",
            "value": Node {
              "end": 62,
              "loc": SourceLocation {
                "end": Position {
                  "column": 20,
                  "index": 62,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": "count",
                "start": Position {
                  "column": 15,
                  "index": 57,
                  "line": 4,
                },
              },
              "name": "count",
              "range": undefined,
              "start": 57,
              "type": "Identifier",
            },
          },
        ],
        "start": 55,
        "type": "ObjectExpression",
      },
    ],
    "callee": Node {
      "end": 54,
      "loc": SourceLocation {
        "end": Position {
          "column": 12,
          "index": 54,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": "vineExpose",
        "start": Position {
          "column": 2,
          "index": 44,
          "line": 4,
        },
      },
      "name": "vineExpose",
      "start": 44,
      "type": "Identifier",
    },
    "end": 65,
    "loc": SourceLocation {
      "end": Position {
        "column": 23,
        "index": 65,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 2,
        "index": 44,
        "line": 4,
      },
    },
    "start": 44,
    "type": "CallExpression",
  },
  "paramObj": Node {
    "end": 64,
    "loc": SourceLocation {
      "end": Position {
        "column": 22,
        "index": 64,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 13,
        "index": 55,
        "line": 4,
      },
    },
    "properties": [
      Node {
        "computed": false,
        "end": 62,
        "extra": {
          "shorthand": true,
        },
        "key": Node {
          "end": 62,
          "loc": SourceLocation {
            "end": Position {
              "column": 20,
              "index": 62,
              "line": 4,
            },
            "filename": undefined,
            "identifierName": "count",
            "start": Position {
              "column": 15,
              "index": 57,
              "line": 4,
            },
          },
          "name": "count",
          "start": 57,
          "type": "Identifier",
        },
        "loc": SourceLocation {
          "end": Position {
            "column": 20,
            "index": 62,
            "line": 4,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 15,
            "index": 57,
            "line": 4,
          },
        },
        "method": false,
        "shorthand": true,
        "start": 57,
        "type": "ObjectProperty",
        "value": Node {
          "end": 62,
          "loc": SourceLocation {
            "end": Position {
              "column": 20,
              "index": 62,
              "line": 4,
            },
            "filename": undefined,
            "identifierName": "count",
            "start": Position {
              "column": 15,
              "index": 57,
              "line": 4,
            },
          },
          "name": "count",
          "range": undefined,
          "start": 57,
          "type": "Identifier",
        },
      },
    ],
    "start": 55,
    "type": "ObjectExpression",
  },
}
`;

exports[`test Vine compiler analyze > analyze \`vineExpose\` and \`vineOptions\` macro calls 2`] = `
Node {
  "end": 130,
  "extra": {
    "trailingComma": 125,
  },
  "loc": SourceLocation {
    "end": Position {
      "column": 3,
      "index": 130,
      "line": 8,
    },
    "filename": undefined,
    "identifierName": undefined,
    "start": Position {
      "column": 14,
      "index": 80,
      "line": 5,
    },
  },
  "properties": [
    Node {
      "computed": false,
      "end": 100,
      "key": Node {
        "end": 90,
        "loc": SourceLocation {
          "end": Position {
            "column": 8,
            "index": 90,
            "line": 6,
          },
          "filename": undefined,
          "identifierName": "name",
          "start": Position {
            "column": 4,
            "index": 86,
            "line": 6,
          },
        },
        "name": "name",
        "start": 86,
        "type": "Identifier",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 18,
          "index": 100,
          "line": 6,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 4,
          "index": 86,
          "line": 6,
        },
      },
      "method": false,
      "shorthand": false,
      "start": 86,
      "type": "ObjectProperty",
      "value": Node {
        "end": 100,
        "extra": {
          "raw": "'MyComp'",
          "rawValue": "MyComp",
        },
        "loc": SourceLocation {
          "end": Position {
            "column": 18,
            "index": 100,
            "line": 6,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 10,
            "index": 92,
            "line": 6,
          },
        },
        "start": 92,
        "type": "StringLiteral",
        "value": "MyComp",
      },
    },
    Node {
      "computed": false,
      "end": 125,
      "key": Node {
        "end": 118,
        "loc": SourceLocation {
          "end": Position {
            "column": 16,
            "index": 118,
            "line": 7,
          },
          "filename": undefined,
          "identifierName": "inheritAttrs",
          "start": Position {
            "column": 4,
            "index": 106,
            "line": 7,
          },
        },
        "name": "inheritAttrs",
        "start": 106,
        "type": "Identifier",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 23,
          "index": 125,
          "line": 7,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 4,
          "index": 106,
          "line": 7,
        },
      },
      "method": false,
      "shorthand": false,
      "start": 106,
      "type": "ObjectProperty",
      "value": Node {
        "end": 125,
        "loc": SourceLocation {
          "end": Position {
            "column": 23,
            "index": 125,
            "line": 7,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 18,
            "index": 120,
            "line": 7,
          },
        },
        "start": 120,
        "type": "BooleanLiteral",
        "value": false,
      },
    },
  ],
  "start": 80,
  "type": "ObjectExpression",
}
`;

exports[`test Vine compiler analyze > analyze vine component props by macro calls 1`] = `
{
  "disabled": {
    "isFromMacroDefine": true,
    "isMaybeBool": true,
    "isRequired": false,
    "macroDeclaredIdentifier": Node {
      "end": 74,
      "loc": SourceLocation {
        "end": Position {
          "column": 16,
          "index": 74,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": "disabled",
        "start": Position {
          "column": 8,
          "index": 66,
          "line": 4,
        },
      },
      "name": "disabled",
      "start": 66,
      "type": "Identifier",
    },
    "typeAnnotationRaw": "boolean",
    "validator": undefined,
  },
  "name": {
    "isFromMacroDefine": true,
    "isMaybeBool": false,
    "isRequired": true,
    "macroDeclaredIdentifier": Node {
      "end": 36,
      "loc": SourceLocation {
        "end": Position {
          "column": 12,
          "index": 36,
          "line": 3,
        },
        "filename": undefined,
        "identifierName": "name",
        "start": Position {
          "column": 8,
          "index": 32,
          "line": 3,
        },
      },
      "name": "name",
      "start": 32,
      "type": "Identifier",
    },
    "typeAnnotationRaw": "string",
    "validator": undefined,
  },
  "title": {
    "default": Node {
      "end": 152,
      "extra": {
        "raw": "'# Title'",
        "rawValue": "# Title",
      },
      "loc": SourceLocation {
        "end": Position {
          "column": 46,
          "index": 152,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 37,
          "index": 143,
          "line": 5,
        },
      },
      "start": 143,
      "type": "StringLiteral",
      "value": "# Title",
    },
    "isFromMacroDefine": true,
    "isMaybeBool": false,
    "isRequired": false,
    "macroDeclaredIdentifier": Node {
      "end": 119,
      "loc": SourceLocation {
        "end": Position {
          "column": 13,
          "index": 119,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": "title",
        "start": Position {
          "column": 8,
          "index": 114,
          "line": 5,
        },
      },
      "name": "title",
      "start": 114,
      "type": "Identifier",
    },
    "typeAnnotationRaw": "string",
    "validator": Node {
      "async": false,
      "body": Node {
        "arguments": [
          Node {
            "end": 189,
            "extra": {
              "raw": "'#'",
              "rawValue": "#",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 83,
                "index": 189,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 80,
                "index": 186,
                "line": 5,
              },
            },
            "start": 186,
            "type": "StringLiteral",
            "value": "#",
          },
        ],
        "callee": Node {
          "computed": false,
          "end": 185,
          "loc": SourceLocation {
            "end": Position {
              "column": 79,
              "index": 185,
              "line": 5,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 65,
              "index": 171,
              "line": 5,
            },
          },
          "object": Node {
            "end": 174,
            "loc": SourceLocation {
              "end": Position {
                "column": 68,
                "index": 174,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": "val",
              "start": Position {
                "column": 65,
                "index": 171,
                "line": 5,
              },
            },
            "name": "val",
            "start": 171,
            "type": "Identifier",
          },
          "property": Node {
            "end": 185,
            "loc": SourceLocation {
              "end": Position {
                "column": 79,
                "index": 185,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": "startsWith",
              "start": Position {
                "column": 69,
                "index": 175,
                "line": 5,
              },
            },
            "name": "startsWith",
            "start": 175,
            "type": "Identifier",
          },
          "start": 171,
          "type": "MemberExpression",
        },
        "end": 190,
        "loc": SourceLocation {
          "end": Position {
            "column": 84,
            "index": 190,
            "line": 5,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 65,
            "index": 171,
            "line": 5,
          },
        },
        "start": 171,
        "type": "CallExpression",
      },
      "end": 190,
      "generator": false,
      "id": null,
      "loc": SourceLocation {
        "end": Position {
          "column": 84,
          "index": 190,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 48,
          "index": 154,
          "line": 5,
        },
      },
      "params": [
        Node {
          "end": 166,
          "loc": SourceLocation {
            "end": Position {
              "column": 60,
              "index": 166,
              "line": 5,
            },
            "filename": undefined,
            "identifierName": "val",
            "start": Position {
              "column": 49,
              "index": 155,
              "line": 5,
            },
          },
          "name": "val",
          "start": 155,
          "type": "Identifier",
          "typeAnnotation": Node {
            "end": 166,
            "loc": SourceLocation {
              "end": Position {
                "column": 60,
                "index": 166,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 52,
                "index": 158,
                "line": 5,
              },
            },
            "start": 158,
            "type": "TSTypeAnnotation",
            "typeAnnotation": Node {
              "end": 166,
              "loc": SourceLocation {
                "end": Position {
                  "column": 60,
                  "index": 166,
                  "line": 5,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 54,
                  "index": 160,
                  "line": 5,
                },
              },
              "start": 160,
              "type": "TSStringKeyword",
            },
          },
        },
      ],
      "start": 154,
      "type": "ArrowFunctionExpression",
    },
  },
}
`;

exports[`test Vine compiler analyze > analyze vine slots definition 1`] = `
{
  "default": {
    "props": Node {
      "end": 98,
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 98,
          "line": 4,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 19,
          "index": 70,
          "line": 4,
        },
      },
      "members": [
        Node {
          "computed": false,
          "end": 83,
          "key": Node {
            "end": 74,
            "loc": SourceLocation {
              "end": Position {
                "column": 23,
                "index": 74,
                "line": 4,
              },
              "filename": undefined,
              "identifierName": "id",
              "start": Position {
                "column": 21,
                "index": 72,
                "line": 4,
              },
            },
            "name": "id",
            "start": 72,
            "type": "Identifier",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 32,
              "index": 83,
              "line": 4,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 21,
              "index": 72,
              "line": 4,
            },
          },
          "start": 72,
          "type": "TSPropertySignature",
          "typeAnnotation": Node {
            "end": 82,
            "loc": SourceLocation {
              "end": Position {
                "column": 31,
                "index": 82,
                "line": 4,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 23,
                "index": 74,
                "line": 4,
              },
            },
            "start": 74,
            "type": "TSTypeAnnotation",
            "typeAnnotation": Node {
              "end": 82,
              "loc": SourceLocation {
                "end": Position {
                  "column": 31,
                  "index": 82,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 25,
                  "index": 76,
                  "line": 4,
                },
              },
              "start": 76,
              "type": "TSStringKeyword",
            },
          },
        },
        Node {
          "computed": false,
          "end": 96,
          "key": Node {
            "end": 87,
            "loc": SourceLocation {
              "end": Position {
                "column": 36,
                "index": 87,
                "line": 4,
              },
              "filename": undefined,
              "identifierName": "msg",
              "start": Position {
                "column": 33,
                "index": 84,
                "line": 4,
              },
            },
            "name": "msg",
            "start": 84,
            "type": "Identifier",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 45,
              "index": 96,
              "line": 4,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 33,
              "index": 84,
              "line": 4,
            },
          },
          "start": 84,
          "type": "TSPropertySignature",
          "typeAnnotation": Node {
            "end": 95,
            "loc": SourceLocation {
              "end": Position {
                "column": 44,
                "index": 95,
                "line": 4,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 36,
                "index": 87,
                "line": 4,
              },
            },
            "start": 87,
            "type": "TSTypeAnnotation",
            "typeAnnotation": Node {
              "end": 95,
              "loc": SourceLocation {
                "end": Position {
                  "column": 44,
                  "index": 95,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 38,
                  "index": 89,
                  "line": 4,
                },
              },
              "start": 89,
              "type": "TSStringKeyword",
            },
          },
        },
      ],
      "start": 70,
      "type": "TSTypeLiteral",
    },
  },
  "header": {
    "props": Node {
      "end": 153,
      "loc": SourceLocation {
        "end": Position {
          "column": 47,
          "index": 153,
          "line": 5,
        },
        "filename": undefined,
        "identifierName": undefined,
        "start": Position {
          "column": 20,
          "index": 126,
          "line": 5,
        },
      },
      "members": [
        Node {
          "computed": false,
          "end": 151,
          "key": Node {
            "end": 133,
            "loc": SourceLocation {
              "end": Position {
                "column": 27,
                "index": 133,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": "align",
              "start": Position {
                "column": 22,
                "index": 128,
                "line": 5,
              },
            },
            "name": "align",
            "start": 128,
            "type": "Identifier",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 45,
              "index": 151,
              "line": 5,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 22,
              "index": 128,
              "line": 5,
            },
          },
          "start": 128,
          "type": "TSPropertySignature",
          "typeAnnotation": Node {
            "end": 151,
            "loc": SourceLocation {
              "end": Position {
                "column": 45,
                "index": 151,
                "line": 5,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 27,
                "index": 133,
                "line": 5,
              },
            },
            "start": 133,
            "type": "TSTypeAnnotation",
            "typeAnnotation": Node {
              "end": 151,
              "loc": SourceLocation {
                "end": Position {
                  "column": 45,
                  "index": 151,
                  "line": 5,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 29,
                  "index": 135,
                  "line": 5,
                },
              },
              "start": 135,
              "type": "TSUnionType",
              "types": [
                Node {
                  "end": 141,
                  "literal": Node {
                    "end": 141,
                    "extra": {
                      "raw": "'left'",
                      "rawValue": "left",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 35,
                        "index": 141,
                        "line": 5,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 29,
                        "index": 135,
                        "line": 5,
                      },
                    },
                    "start": 135,
                    "type": "StringLiteral",
                    "value": "left",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 35,
                      "index": 141,
                      "line": 5,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 29,
                      "index": 135,
                      "line": 5,
                    },
                  },
                  "start": 135,
                  "type": "TSLiteralType",
                },
                Node {
                  "end": 151,
                  "literal": Node {
                    "end": 151,
                    "extra": {
                      "raw": "'right'",
                      "rawValue": "right",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 45,
                        "index": 151,
                        "line": 5,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 38,
                        "index": 144,
                        "line": 5,
                      },
                    },
                    "start": 144,
                    "type": "StringLiteral",
                    "value": "right",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 45,
                      "index": 151,
                      "line": 5,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 38,
                      "index": 144,
                      "line": 5,
                    },
                  },
                  "start": 144,
                  "type": "TSLiteralType",
                },
              ],
            },
          },
        },
      ],
      "start": 126,
      "type": "TSTypeLiteral",
    },
  },
}
`;

exports[`test Vine compiler analyze > analyze vine template 1`] = `
{
  "cached": [],
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": {
                "ast": null,
                "constType": 0,
                "content": "__props.title",
                "isStatic": false,
                "loc": {
                  "end": {
                    "column": 19,
                    "line": 3,
                    "offset": 29,
                  },
                  "source": "title",
                  "start": {
                    "column": 14,
                    "line": 3,
                    "offset": 24,
                  },
                },
                "type": 4,
              },
              "loc": {
                "end": {
                  "column": 22,
                  "line": 3,
                  "offset": 32,
                },
                "source": "{{ title }}",
                "start": {
                  "column": 11,
                  "line": 3,
                  "offset": 21,
                },
              },
              "type": 5,
            },
          ],
          "codegenNode": {
            "children": {
              "content": {
                "ast": null,
                "constType": 0,
                "content": "__props.title",
                "isStatic": false,
                "loc": {
                  "end": {
                    "column": 19,
                    "line": 3,
                    "offset": 29,
                  },
                  "source": "title",
                  "start": {
                    "column": 14,
                    "line": 3,
                    "offset": 24,
                  },
                },
                "type": 4,
              },
              "loc": {
                "end": {
                  "column": 22,
                  "line": 3,
                  "offset": 32,
                },
                "source": "{{ title }}",
                "start": {
                  "column": 11,
                  "line": 3,
                  "offset": 21,
                },
              },
              "type": 5,
            },
            "directives": undefined,
            "disableTracking": false,
            "dynamicProps": undefined,
            "isBlock": false,
            "isComponent": false,
            "loc": {
              "end": {
                "column": 27,
                "line": 3,
                "offset": 37,
              },
              "source": "<h1>{{ title }}</h1>",
              "start": {
                "column": 7,
                "line": 3,
                "offset": 17,
              },
            },
            "patchFlag": 1,
            "props": undefined,
            "tag": ""h1"",
            "type": 13,
          },
          "loc": {
            "end": {
              "column": 27,
              "line": 3,
              "offset": 37,
            },
            "source": "<h1>{{ title }}</h1>",
            "start": {
              "column": 7,
              "line": 3,
              "offset": 17,
            },
          },
          "ns": 0,
          "props": [],
          "tag": "h1",
          "tagType": 0,
          "type": 1,
        },
        {
          "children": [],
          "codegenNode": {
            "arguments": [
              "_ctx.$slots",
              ""default"",
            ],
            "callee": Symbol(renderSlot),
            "loc": {
              "end": {
                "column": 15,
                "line": 4,
                "offset": 52,
              },
              "source": "<slot />",
              "start": {
                "column": 7,
                "line": 4,
                "offset": 44,
              },
            },
            "type": 14,
          },
          "isSelfClosing": true,
          "loc": {
            "end": {
              "column": 15,
              "line": 4,
              "offset": 52,
            },
            "source": "<slot />",
            "start": {
              "column": 7,
              "line": 4,
              "offset": 44,
            },
          },
          "ns": 0,
          "props": [],
          "tag": "slot",
          "tagType": 2,
          "type": 1,
        },
      ],
      "codegenNode": {
        "children": [
          {
            "children": [
              {
                "content": {
                  "ast": null,
                  "constType": 0,
                  "content": "__props.title",
                  "isStatic": false,
                  "loc": {
                    "end": {
                      "column": 19,
                      "line": 3,
                      "offset": 29,
                    },
                    "source": "title",
                    "start": {
                      "column": 14,
                      "line": 3,
                      "offset": 24,
                    },
                  },
                  "type": 4,
                },
                "loc": {
                  "end": {
                    "column": 22,
                    "line": 3,
                    "offset": 32,
                  },
                  "source": "{{ title }}",
                  "start": {
                    "column": 11,
                    "line": 3,
                    "offset": 21,
                  },
                },
                "type": 5,
              },
            ],
            "codegenNode": {
              "children": {
                "content": {
                  "ast": null,
                  "constType": 0,
                  "content": "__props.title",
                  "isStatic": false,
                  "loc": {
                    "end": {
                      "column": 19,
                      "line": 3,
                      "offset": 29,
                    },
                    "source": "title",
                    "start": {
                      "column": 14,
                      "line": 3,
                      "offset": 24,
                    },
                  },
                  "type": 4,
                },
                "loc": {
                  "end": {
                    "column": 22,
                    "line": 3,
                    "offset": 32,
                  },
                  "source": "{{ title }}",
                  "start": {
                    "column": 11,
                    "line": 3,
                    "offset": 21,
                  },
                },
                "type": 5,
              },
              "directives": undefined,
              "disableTracking": false,
              "dynamicProps": undefined,
              "isBlock": false,
              "isComponent": false,
              "loc": {
                "end": {
                  "column": 27,
                  "line": 3,
                  "offset": 37,
                },
                "source": "<h1>{{ title }}</h1>",
                "start": {
                  "column": 7,
                  "line": 3,
                  "offset": 17,
                },
              },
              "patchFlag": 1,
              "props": undefined,
              "tag": ""h1"",
              "type": 13,
            },
            "loc": {
              "end": {
                "column": 27,
                "line": 3,
                "offset": 37,
              },
              "source": "<h1>{{ title }}</h1>",
              "start": {
                "column": 7,
                "line": 3,
                "offset": 17,
              },
            },
            "ns": 0,
            "props": [],
            "tag": "h1",
            "tagType": 0,
            "type": 1,
          },
          {
            "children": [],
            "codegenNode": {
              "arguments": [
                "_ctx.$slots",
                ""default"",
              ],
              "callee": Symbol(renderSlot),
              "loc": {
                "end": {
                  "column": 15,
                  "line": 4,
                  "offset": 52,
                },
                "source": "<slot />",
                "start": {
                  "column": 7,
                  "line": 4,
                  "offset": 44,
                },
              },
              "type": 14,
            },
            "isSelfClosing": true,
            "loc": {
              "end": {
                "column": 15,
                "line": 4,
                "offset": 52,
              },
              "source": "<slot />",
              "start": {
                "column": 7,
                "line": 4,
                "offset": 44,
              },
            },
            "ns": 0,
            "props": [],
            "tag": "slot",
            "tagType": 2,
            "type": 1,
          },
        ],
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "isComponent": false,
        "loc": {
          "end": {
            "column": 11,
            "line": 5,
            "offset": 63,
          },
          "source": "<div>
      <h1>{{ title }}</h1>
      <slot />
    </div>",
          "start": {
            "column": 5,
            "line": 2,
            "offset": 5,
          },
        },
        "patchFlag": undefined,
        "props": undefined,
        "tag": ""div"",
        "type": 13,
      },
      "loc": {
        "end": {
          "column": 11,
          "line": 5,
          "offset": 63,
        },
        "source": "<div>
      <h1>{{ title }}</h1>
      <slot />
    </div>",
        "start": {
          "column": 5,
          "line": 2,
          "offset": 5,
        },
      },
      "ns": 0,
      "props": [],
      "tag": "div",
      "tagType": 0,
      "type": 1,
    },
  ],
  "codegenNode": {
    "children": [
      {
        "children": [
          {
            "content": {
              "ast": null,
              "constType": 0,
              "content": "__props.title",
              "isStatic": false,
              "loc": {
                "end": {
                  "column": 19,
                  "line": 3,
                  "offset": 29,
                },
                "source": "title",
                "start": {
                  "column": 14,
                  "line": 3,
                  "offset": 24,
                },
              },
              "type": 4,
            },
            "loc": {
              "end": {
                "column": 22,
                "line": 3,
                "offset": 32,
              },
              "source": "{{ title }}",
              "start": {
                "column": 11,
                "line": 3,
                "offset": 21,
              },
            },
            "type": 5,
          },
        ],
        "codegenNode": {
          "children": {
            "content": {
              "ast": null,
              "constType": 0,
              "content": "__props.title",
              "isStatic": false,
              "loc": {
                "end": {
                  "column": 19,
                  "line": 3,
                  "offset": 29,
                },
                "source": "title",
                "start": {
                  "column": 14,
                  "line": 3,
                  "offset": 24,
                },
              },
              "type": 4,
            },
            "loc": {
              "end": {
                "column": 22,
                "line": 3,
                "offset": 32,
              },
              "source": "{{ title }}",
              "start": {
                "column": 11,
                "line": 3,
                "offset": 21,
              },
            },
            "type": 5,
          },
          "directives": undefined,
          "disableTracking": false,
          "dynamicProps": undefined,
          "isBlock": false,
          "isComponent": false,
          "loc": {
            "end": {
              "column": 27,
              "line": 3,
              "offset": 37,
            },
            "source": "<h1>{{ title }}</h1>",
            "start": {
              "column": 7,
              "line": 3,
              "offset": 17,
            },
          },
          "patchFlag": 1,
          "props": undefined,
          "tag": ""h1"",
          "type": 13,
        },
        "loc": {
          "end": {
            "column": 27,
            "line": 3,
            "offset": 37,
          },
          "source": "<h1>{{ title }}</h1>",
          "start": {
            "column": 7,
            "line": 3,
            "offset": 17,
          },
        },
        "ns": 0,
        "props": [],
        "tag": "h1",
        "tagType": 0,
        "type": 1,
      },
      {
        "children": [],
        "codegenNode": {
          "arguments": [
            "_ctx.$slots",
            ""default"",
          ],
          "callee": Symbol(renderSlot),
          "loc": {
            "end": {
              "column": 15,
              "line": 4,
              "offset": 52,
            },
            "source": "<slot />",
            "start": {
              "column": 7,
              "line": 4,
              "offset": 44,
            },
          },
          "type": 14,
        },
        "isSelfClosing": true,
        "loc": {
          "end": {
            "column": 15,
            "line": 4,
            "offset": 52,
          },
          "source": "<slot />",
          "start": {
            "column": 7,
            "line": 4,
            "offset": 44,
          },
        },
        "ns": 0,
        "props": [],
        "tag": "slot",
        "tagType": 2,
        "type": 1,
      },
    ],
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "isComponent": false,
    "loc": {
      "end": {
        "column": 11,
        "line": 5,
        "offset": 63,
      },
      "source": "<div>
      <h1>{{ title }}</h1>
      <slot />
    </div>",
      "start": {
        "column": 5,
        "line": 2,
        "offset": 5,
      },
    },
    "patchFlag": undefined,
    "props": undefined,
    "tag": ""div"",
    "type": 13,
  },
  "components": [],
  "directives": [],
  "filters": [],
  "helpers": Set {
    Symbol(toDisplayString),
    Symbol(createElementVNode),
    Symbol(renderSlot),
    Symbol(openBlock),
    Symbol(createElementBlock),
  },
  "hoists": [],
  "imports": [],
  "loc": {
    "end": {
      "column": 3,
      "line": 6,
      "offset": 66,
    },
    "source": "
    <div>
      <h1>{{ title }}</h1>
      <slot />
    </div>
  ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "source": "
    <div>
      <h1>{{ title }}</h1>
      <slot />
    </div>
  ",
  "temps": 0,
  "transformed": true,
  "type": 0,
}
`;

exports[`test Vine compiler analyze > analyze vine template 2`] = `
{
  "cached": [
    {
      "inVOnce": false,
      "index": 0,
      "loc": {
        "end": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
        "source": "",
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "needArraySpread": false,
      "needPauseTracking": false,
      "type": 20,
      "value": {
        "elements": [
          {
            "children": [
              {
                "content": "Test inner content",
                "loc": {
                  "end": {
                    "column": 30,
                    "line": 3,
                    "offset": 64,
                  },
                  "source": "Test inner content",
                  "start": {
                    "column": 12,
                    "line": 3,
                    "offset": 46,
                  },
                },
                "type": 2,
              },
            ],
            "codegenNode": {
              "children": {
                "content": "Test inner content",
                "loc": {
                  "end": {
                    "column": 30,
                    "line": 3,
                    "offset": 64,
                  },
                  "source": "Test inner content",
                  "start": {
                    "column": 12,
                    "line": 3,
                    "offset": 46,
                  },
                },
                "type": 2,
              },
              "directives": undefined,
              "disableTracking": false,
              "dynamicProps": undefined,
              "isBlock": false,
              "isComponent": false,
              "loc": {
                "end": {
                  "column": 36,
                  "line": 3,
                  "offset": 70,
                },
                "source": "<div>Test inner content</div>",
                "start": {
                  "column": 7,
                  "line": 3,
                  "offset": 41,
                },
              },
              "patchFlag": -1,
              "props": undefined,
              "tag": ""div"",
              "type": 13,
            },
            "loc": {
              "end": {
                "column": 36,
                "line": 3,
                "offset": 70,
              },
              "source": "<div>Test inner content</div>",
              "start": {
                "column": 7,
                "line": 3,
                "offset": 41,
              },
            },
            "ns": 0,
            "props": [],
            "tag": "div",
            "tagType": 0,
            "type": 1,
          },
        ],
        "loc": {
          "end": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "source": "",
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "type": 17,
      },
    },
  ],
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "Test inner content",
              "loc": {
                "end": {
                  "column": 30,
                  "line": 3,
                  "offset": 64,
                },
                "source": "Test inner content",
                "start": {
                  "column": 12,
                  "line": 3,
                  "offset": 46,
                },
              },
              "type": 2,
            },
          ],
          "codegenNode": {
            "children": {
              "content": "Test inner content",
              "loc": {
                "end": {
                  "column": 30,
                  "line": 3,
                  "offset": 64,
                },
                "source": "Test inner content",
                "start": {
                  "column": 12,
                  "line": 3,
                  "offset": 46,
                },
              },
              "type": 2,
            },
            "directives": undefined,
            "disableTracking": false,
            "dynamicProps": undefined,
            "isBlock": false,
            "isComponent": false,
            "loc": {
              "end": {
                "column": 36,
                "line": 3,
                "offset": 70,
              },
              "source": "<div>Test inner content</div>",
              "start": {
                "column": 7,
                "line": 3,
                "offset": 41,
              },
            },
            "patchFlag": -1,
            "props": undefined,
            "tag": ""div"",
            "type": 13,
          },
          "loc": {
            "end": {
              "column": 36,
              "line": 3,
              "offset": 70,
            },
            "source": "<div>Test inner content</div>",
            "start": {
              "column": 7,
              "line": 3,
              "offset": 41,
            },
          },
          "ns": 0,
          "props": [],
          "tag": "div",
          "tagType": 0,
          "type": 1,
        },
      ],
      "codegenNode": {
        "children": {
          "loc": {
            "end": {
              "column": 13,
              "line": 4,
              "offset": 83,
            },
            "source": "<MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>",
            "start": {
              "column": 5,
              "line": 2,
              "offset": 5,
            },
          },
          "properties": [
            {
              "key": {
                "constType": 3,
                "content": "default",
                "isStatic": true,
                "loc": {
                  "end": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                  "source": "",
                  "start": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                },
                "type": 4,
              },
              "loc": {
                "end": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": 16,
              "value": {
                "isSlot": true,
                "loc": {
                  "end": {
                    "column": 36,
                    "line": 3,
                    "offset": 70,
                  },
                  "source": "<div>Test inner content</div>",
                  "start": {
                    "column": 7,
                    "line": 3,
                    "offset": 41,
                  },
                },
                "newline": false,
                "params": undefined,
                "returns": {
                  "inVOnce": false,
                  "index": 0,
                  "loc": {
                    "end": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                    "source": "",
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "needArraySpread": false,
                  "needPauseTracking": false,
                  "type": 20,
                  "value": {
                    "elements": [
                      {
                        "children": [
                          {
                            "content": "Test inner content",
                            "loc": {
                              "end": {
                                "column": 30,
                                "line": 3,
                                "offset": 64,
                              },
                              "source": "Test inner content",
                              "start": {
                                "column": 12,
                                "line": 3,
                                "offset": 46,
                              },
                            },
                            "type": 2,
                          },
                        ],
                        "codegenNode": {
                          "children": {
                            "content": "Test inner content",
                            "loc": {
                              "end": {
                                "column": 30,
                                "line": 3,
                                "offset": 64,
                              },
                              "source": "Test inner content",
                              "start": {
                                "column": 12,
                                "line": 3,
                                "offset": 46,
                              },
                            },
                            "type": 2,
                          },
                          "directives": undefined,
                          "disableTracking": false,
                          "dynamicProps": undefined,
                          "isBlock": false,
                          "isComponent": false,
                          "loc": {
                            "end": {
                              "column": 36,
                              "line": 3,
                              "offset": 70,
                            },
                            "source": "<div>Test inner content</div>",
                            "start": {
                              "column": 7,
                              "line": 3,
                              "offset": 41,
                            },
                          },
                          "patchFlag": -1,
                          "props": undefined,
                          "tag": ""div"",
                          "type": 13,
                        },
                        "loc": {
                          "end": {
                            "column": 36,
                            "line": 3,
                            "offset": 70,
                          },
                          "source": "<div>Test inner content</div>",
                          "start": {
                            "column": 7,
                            "line": 3,
                            "offset": 41,
                          },
                        },
                        "ns": 0,
                        "props": [],
                        "tag": "div",
                        "tagType": 0,
                        "type": 1,
                      },
                    ],
                    "loc": {
                      "end": {
                        "column": 1,
                        "line": 1,
                        "offset": 0,
                      },
                      "source": "",
                      "start": {
                        "column": 1,
                        "line": 1,
                        "offset": 0,
                      },
                    },
                    "type": 17,
                  },
                },
                "type": 18,
              },
            },
            {
              "key": {
                "constType": 3,
                "content": "_",
                "isStatic": true,
                "loc": {
                  "end": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                  "source": "",
                  "start": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                },
                "type": 4,
              },
              "loc": {
                "end": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": 16,
              "value": {
                "constType": 0,
                "content": "1 /* STABLE */",
                "isStatic": false,
                "loc": {
                  "end": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                  "source": "",
                  "start": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                },
                "type": 4,
              },
            },
          ],
          "type": 15,
        },
        "directives": undefined,
        "disableTracking": false,
        "dynamicProps": undefined,
        "isBlock": true,
        "isComponent": true,
        "loc": {
          "end": {
            "column": 13,
            "line": 4,
            "offset": 83,
          },
          "source": "<MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>",
          "start": {
            "column": 5,
            "line": 2,
            "offset": 5,
          },
        },
        "patchFlag": undefined,
        "props": {
          "loc": {
            "end": {
              "column": 13,
              "line": 4,
              "offset": 83,
            },
            "source": "<MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>",
            "start": {
              "column": 5,
              "line": 2,
              "offset": 5,
            },
          },
          "properties": [
            {
              "key": {
                "constType": 3,
                "content": "title",
                "isStatic": true,
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 2,
                    "offset": 17,
                  },
                  "source": "title",
                  "start": {
                    "column": 12,
                    "line": 2,
                    "offset": 12,
                  },
                },
                "type": 4,
              },
              "loc": {
                "end": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": 16,
              "value": {
                "constType": 3,
                "content": "Test template",
                "isStatic": true,
                "loc": {
                  "end": {
                    "column": 33,
                    "line": 2,
                    "offset": 33,
                  },
                  "source": ""Test template"",
                  "start": {
                    "column": 18,
                    "line": 2,
                    "offset": 18,
                  },
                },
                "type": 4,
              },
            },
          ],
          "type": 15,
        },
        "tag": "MyBox",
        "type": 13,
      },
      "loc": {
        "end": {
          "column": 13,
          "line": 4,
          "offset": 83,
        },
        "source": "<MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>",
        "start": {
          "column": 5,
          "line": 2,
          "offset": 5,
        },
      },
      "ns": 0,
      "props": [
        {
          "loc": {
            "end": {
              "column": 33,
              "line": 2,
              "offset": 33,
            },
            "source": "title="Test template"",
            "start": {
              "column": 12,
              "line": 2,
              "offset": 12,
            },
          },
          "name": "title",
          "nameLoc": {
            "end": {
              "column": 17,
              "line": 2,
              "offset": 17,
            },
            "source": "title",
            "start": {
              "column": 12,
              "line": 2,
              "offset": 12,
            },
          },
          "type": 6,
          "value": {
            "content": "Test template",
            "loc": {
              "end": {
                "column": 33,
                "line": 2,
                "offset": 33,
              },
              "source": ""Test template"",
              "start": {
                "column": 18,
                "line": 2,
                "offset": 18,
              },
            },
            "type": 2,
          },
        },
      ],
      "tag": "MyBox",
      "tagType": 1,
      "type": 1,
    },
  ],
  "codegenNode": {
    "children": {
      "loc": {
        "end": {
          "column": 13,
          "line": 4,
          "offset": 83,
        },
        "source": "<MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>",
        "start": {
          "column": 5,
          "line": 2,
          "offset": 5,
        },
      },
      "properties": [
        {
          "key": {
            "constType": 3,
            "content": "default",
            "isStatic": true,
            "loc": {
              "end": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 4,
          },
          "loc": {
            "end": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": 16,
          "value": {
            "isSlot": true,
            "loc": {
              "end": {
                "column": 36,
                "line": 3,
                "offset": 70,
              },
              "source": "<div>Test inner content</div>",
              "start": {
                "column": 7,
                "line": 3,
                "offset": 41,
              },
            },
            "newline": false,
            "params": undefined,
            "returns": {
              "inVOnce": false,
              "index": 0,
              "loc": {
                "end": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
                "source": "",
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "needArraySpread": false,
              "needPauseTracking": false,
              "type": 20,
              "value": {
                "elements": [
                  {
                    "children": [
                      {
                        "content": "Test inner content",
                        "loc": {
                          "end": {
                            "column": 30,
                            "line": 3,
                            "offset": 64,
                          },
                          "source": "Test inner content",
                          "start": {
                            "column": 12,
                            "line": 3,
                            "offset": 46,
                          },
                        },
                        "type": 2,
                      },
                    ],
                    "codegenNode": {
                      "children": {
                        "content": "Test inner content",
                        "loc": {
                          "end": {
                            "column": 30,
                            "line": 3,
                            "offset": 64,
                          },
                          "source": "Test inner content",
                          "start": {
                            "column": 12,
                            "line": 3,
                            "offset": 46,
                          },
                        },
                        "type": 2,
                      },
                      "directives": undefined,
                      "disableTracking": false,
                      "dynamicProps": undefined,
                      "isBlock": false,
                      "isComponent": false,
                      "loc": {
                        "end": {
                          "column": 36,
                          "line": 3,
                          "offset": 70,
                        },
                        "source": "<div>Test inner content</div>",
                        "start": {
                          "column": 7,
                          "line": 3,
                          "offset": 41,
                        },
                      },
                      "patchFlag": -1,
                      "props": undefined,
                      "tag": ""div"",
                      "type": 13,
                    },
                    "loc": {
                      "end": {
                        "column": 36,
                        "line": 3,
                        "offset": 70,
                      },
                      "source": "<div>Test inner content</div>",
                      "start": {
                        "column": 7,
                        "line": 3,
                        "offset": 41,
                      },
                    },
                    "ns": 0,
                    "props": [],
                    "tag": "div",
                    "tagType": 0,
                    "type": 1,
                  },
                ],
                "loc": {
                  "end": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                  "source": "",
                  "start": {
                    "column": 1,
                    "line": 1,
                    "offset": 0,
                  },
                },
                "type": 17,
              },
            },
            "type": 18,
          },
        },
        {
          "key": {
            "constType": 3,
            "content": "_",
            "isStatic": true,
            "loc": {
              "end": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 4,
          },
          "loc": {
            "end": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": 16,
          "value": {
            "constType": 0,
            "content": "1 /* STABLE */",
            "isStatic": false,
            "loc": {
              "end": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
              "source": "",
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "type": 4,
          },
        },
      ],
      "type": 15,
    },
    "directives": undefined,
    "disableTracking": false,
    "dynamicProps": undefined,
    "isBlock": true,
    "isComponent": true,
    "loc": {
      "end": {
        "column": 13,
        "line": 4,
        "offset": 83,
      },
      "source": "<MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>",
      "start": {
        "column": 5,
        "line": 2,
        "offset": 5,
      },
    },
    "patchFlag": undefined,
    "props": {
      "loc": {
        "end": {
          "column": 13,
          "line": 4,
          "offset": 83,
        },
        "source": "<MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>",
        "start": {
          "column": 5,
          "line": 2,
          "offset": 5,
        },
      },
      "properties": [
        {
          "key": {
            "constType": 3,
            "content": "title",
            "isStatic": true,
            "loc": {
              "end": {
                "column": 17,
                "line": 2,
                "offset": 17,
              },
              "source": "title",
              "start": {
                "column": 12,
                "line": 2,
                "offset": 12,
              },
            },
            "type": 4,
          },
          "loc": {
            "end": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
            "source": "",
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": 16,
          "value": {
            "constType": 3,
            "content": "Test template",
            "isStatic": true,
            "loc": {
              "end": {
                "column": 33,
                "line": 2,
                "offset": 33,
              },
              "source": ""Test template"",
              "start": {
                "column": 18,
                "line": 2,
                "offset": 18,
              },
            },
            "type": 4,
          },
        },
      ],
      "type": 15,
    },
    "tag": "MyBox",
    "type": 13,
  },
  "components": [],
  "directives": [],
  "filters": [],
  "helpers": Set {
    Symbol(createElementVNode),
    Symbol(withCtx),
    Symbol(openBlock),
    Symbol(createBlock),
  },
  "hoists": [],
  "imports": [],
  "loc": {
    "end": {
      "column": 3,
      "line": 5,
      "offset": 86,
    },
    "source": "
    <MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>
  ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "source": "
    <MyBox title="Test template">
      <div>Test inner content</div>
    </MyBox>
  ",
  "temps": 0,
  "transformed": true,
  "type": 0,
}
`;
